--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,43 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlinVersion = '1.3.0'
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha06"
     }
 }
 
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
+}
+
+task runDomainTests(dependsOn: [':domain:test']) {
+    description 'Run tests for the domain layer.'
+}
+
+task runDataTests(dependsOn: [':data:cleanTestDebugUnitTest', ':data:testDebugUnitTest', 'data:connectedAndroidTest']) {
+    description 'Run tests for the data layer.'
+}
+
+task runAllTests(dependsOn: ['runDomainTests',
+                             'runDataTests',
+                             'presentation:cleanTestDebugUnitTest',
+                             'presentation:testDebugUnitTest',
+                             ':presentation:connectedAndroidTest']) {
+
+    description 'Run application tests.'
 }
 
 task clean(type: Delete) {
