Add user id filter to fetch album method

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext {
     retrofit2Version = '2.4.0'
     butterknifeVersion = '8.8.1'
     picassoVersion = '2.71828'
-    supportVersion = '1.0.0-rc02'//'1.0.0-alpha1'
+    supportVersion = '1.0.0-rc02'//'
     daggerVersion = '2.16'
     espressoVersion = '3.1.0-alpha1'
     powermockVersion = '1.7.4'
@@ -19,7 +19,7 @@ ext {
     rxJavaVersion = '2.2.2'
     rxAndroidVersion = '2.1.0'
     reactiveStreamsVersion = '1.1.0'
-    roomVersion = '2.1.0-alpha01'//'2.0.0-beta01'
+    roomVersion = '2.1.0-alpha01'//'
     pagingVersion = '2.0.0'
     javaxInjectVersion = '1'
     okhttpLoggingVersion = '3.11.0'
