--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply from: 'dependencies.gradle'
 
 buildscript {
-    ext.kotlinVersion = '1.3.0'
+    ext.kotlinVersion = '1.3.10'
     repositories {
         google()
         mavenCentral()
@@ -11,7 +11,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha06"
     }
 }
 
@@ -23,19 +22,10 @@ allprojects {
     }
 }
 
-task runDomainTests(dependsOn: [':domain:test']) {
-    description 'Run tests for the domain layer.'
-}
 
-task runDataTests(dependsOn: [':data:cleanTestDebugUnitTest', ':data:testDebugUnitTest', 'data:connectedAndroidTest']) {
-    description 'Run tests for the data layer.'
-}
-
-task runAllTests(dependsOn: ['runDomainTests',
-                             'runDataTests',
-                             'presentation:cleanTestDebugUnitTest',
-                             'presentation:testDebugUnitTest',
-                             ':presentation:connectedAndroidTest']) {
+task runAllTests(dependsOn: ['app:cleanTestDebugUnitTest',
+                             'app:testDebugUnitTest',
+                             ':app:connectedAndroidTest']) {
 
     description 'Run application tests.'
 }
